--- a/blog.html
+++ b/blog.html
@@ -152,6 +152,9 @@
                     <li>
                         <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                     </li>
+                     <li>
+                        <a href="blog.html"><i class="fa fa-fw fa-blog"></i> Blog</a>
+                    </li>
                     <li>
                         <a href="charts.html"><i class="fa fa-fw fa-bar-chart-o"></i> Charts</a>
                     </li>
