--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
                     <li class="active">
                         <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                     </li>
+                    
+                    <li>
+                        <a href="blog.html"><i class="fa fa-fw fa-blog"></i> Blog</a>
+                    </li>
                     <li>
                         <a href="charts.html"><i class="fa fa-fw fa-bar-chart-o"></i> Charts</a>
                     </li>
