--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <div class="row">
                     <div class="col-sm-4">
                         <ul class="list-group">
-                            <li class="list-group-item">Cras justo odio</li>
+                            <a href="link.html"><li class="list-group-item">test link</li></a>
                             <li class="list-group-item">Dapibus ac facilisis in</li>
                             <li class="list-group-item">Morbi leo risus</li>
                             <li class="list-group-item">Porta ac consectetur ac</li>
