--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
             var out = "";
             var i;
             for(i = 0; i < arr.length; i++) {
-                out += '<a href="' + arr[i].url + '">' + 
-                arr[i].display + '</a><br />';
+                out += '<a href="' + arr[i].url + '"><li class="list-group-item">' + 
+                arr[i].display + '</li></a><br />';
             }
             out += "";
             document.getElementById("blog_posts").innerHTML = out;
