--- a/index.html
+++ b/index.html
@@ -254,22 +254,32 @@
 
     
     <script>
+        var xmlhttp = new XMLHttpRequest();
+        var url = "blog_list";
+        xmlhttp.onreadystatechange = function() {
+            if (this.readyState == 4 && this.status == 200) {
+                var myArr = JSON.parse(this.responseText);
+                myFunction(myArr);
+            }
+        };
+        xmlhttp.open("GET", url, true);
+        xmlhttp.send();
 
         function myFunction(arr) {
             var out = "";
             var i;
             for(i = 0; i < arr.length; i++) {
                 out += '<a href="' + arr[i].url + '"><li class="list-group-item">' + 
-                arr[i].display + '</li></a><br />';
+                arr[i].display + '</li></a>';
             }
             out += "";
             document.getElementById("blog_posts").innerHTML = out;
         }
-        myFunction([
-             {"url": "http://www.ucla.edu", "display": "UCLA"},
-             {"url": "https://www.kernel.org", "display": "KERNEL"},
-             {"url": "http://flask.pocoo.org/", "display": "FLAsk"}
-            ]);
+//         myFunction([
+//              {"url": "http://www.ucla.edu", "display": "UCLA"},
+//              {"url": "https://www.kernel.org", "display": "KERNEL"},
+//              {"url": "http://flask.pocoo.org/", "display": "FLAsk"}
+//             ]);
     </script>
 </body>
 
