--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     
     <script>
         var xmlhttp = new XMLHttpRequest();
-        var url = "blog_list";
+        var url = "blog_list.json";
         xmlhttp.onreadystatechange = function() {
             if (this.readyState == 4 && this.status == 200) {
                 var myArr = JSON.parse(this.responseText);
